--- a/package.json
+++ b/package.json
@@ -29,12 +29,15 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "storybook": "start-storybook -p 9009",
+    "build-storybook": "storybook build"
   },
   "eslintConfig": {
     "extends": [
       "react-app",
-      "react-app/jest"
+      "react-app/jest",
+      "plugin:storybook/recommended"
     ]
   },
   "browserslist": {
@@ -50,7 +53,20 @@
     ]
   },
   "devDependencies": {
-    "@types/uuid": "^9.0.1"
+    "@babel/preset-env": "^7.22.10",
+    "@babel/preset-react": "^7.22.5",
+    "@babel/preset-typescript": "^7.22.5",
+    "@storybook/addon-essentials": "7.3.0",
+    "@storybook/addon-interactions": "7.3.0",
+    "@storybook/addon-links": "7.3.0",
+    "@storybook/addon-onboarding": "1.0.8",
+    "@storybook/blocks": "7.3.0",
+    "@storybook/react": "7.3.0",
+    "@storybook/react-webpack5": "7.3.0",
+    "@storybook/testing-library": "0.2.0",
+    "@types/uuid": "^9.0.1",
+    "eslint-plugin-storybook": "^0.6.13",
+    "storybook": "7.3.0"
   },
   "peerDependencies": {
     "react": "^17.0.0 || ^18.0.0",
