--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "storybook": "start-storybook -p 9009",
+    "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
   },
   "eslintConfig": {
