--- a/package.json
+++ b/package.json
@@ -1,36 +1,38 @@
 {
-  "name": "1-lesson",
+  "name": "it-incubator-todolist-ts",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
-    "@mui/icons-material": "^5.13.7",
-    "@mui/material": "^5.13.7",
-    "@mui/styled-engine-sc": "^5.12.0",
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "@mui/icons-material": "^5.10.9",
+    "@mui/material": "^5.10.10",
+    "@mui/styled-engine-sc": "^5.10.6",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.1",
-    "@types/react": "^18.0.23",
-    "@types/react-dom": "^18.0.7",
+    "@testing-library/user-event": "^14.4.3",
+    "@types/jest": "^29.2.0",
+    "@types/node": "^18.11.2",
+    "@types/react": "^18.0.21",
+    "@types/react-dom": "^18.0.6",
+    "@types/react-redux": "^7.1.24",
+    "@types/uuid": "^8.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^8.1.1",
+    "react-redux": "^8.0.4",
     "react-scripts": "5.0.1",
-    "redux": "^4.2.1",
-    "styled-components": "^6.0.2",
+    "redux": "^4.2.0",
+    "styled-components": "^5.3.6",
     "typescript": "^4.8.4",
     "uuid": "^9.0.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^3.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "storybook": "storybook dev -p 6006",
+    "storybook": "storybook dev -p 9009",
     "build-storybook": "storybook build"
   },
   "eslintConfig": {
@@ -53,23 +55,19 @@
     ]
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.22.10",
-    "@babel/preset-react": "^7.22.5",
-    "@babel/preset-typescript": "^7.22.5",
-    "@storybook/addon-essentials": "7.3.0",
-    "@storybook/addon-interactions": "7.3.0",
-    "@storybook/addon-links": "7.3.0",
+    "@storybook/addon-essentials": "7.3.1",
+    "@storybook/addon-interactions": "7.3.1",
+    "@storybook/addon-links": "7.3.1",
     "@storybook/addon-onboarding": "1.0.8",
-    "@storybook/blocks": "7.3.0",
-    "@storybook/react": "7.3.0",
-    "@storybook/react-webpack5": "7.3.0",
+    "@storybook/blocks": "7.3.1",
+    "@storybook/preset-create-react-app": "7.3.0",
+    "@storybook/react": "7.3.1",
+    "@storybook/react-webpack5": "7.3.1",
     "@storybook/testing-library": "0.2.0",
-    "@types/uuid": "^9.0.1",
+    "babel-plugin-named-exports-order": "0.0.2",
     "eslint-plugin-storybook": "^0.6.13",
-    "storybook": "7.3.0"
-  },
-  "peerDependencies": {
-    "react": "^17.0.0 || ^18.0.0",
-    "react-dom": "^17.0.0 || ^18.0.0"
+    "prop-types": "15.8.1",
+    "storybook": "7.3.1",
+    "webpack": "5.88.2"
   }
 }
