--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "storybook": "storybook dev -p 9009",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "jest:integration": "jest -c integration/jest.config.js",
+    "test:integration": "start-server-and-test storybook http-get://localhost:9009 jest:integration"
   },
   "eslintConfig": {
     "extends": [
@@ -59,6 +61,7 @@
     "@storybook/addon-interactions": "7.3.1",
     "@storybook/addon-links": "7.3.1",
     "@storybook/addon-onboarding": "1.0.8",
+    "@storybook/addon-storysource": "^7.3.1",
     "@storybook/blocks": "7.3.1",
     "@storybook/preset-create-react-app": "7.3.0",
     "@storybook/react": "7.3.1",
@@ -66,7 +69,13 @@
     "@storybook/testing-library": "0.2.0",
     "babel-plugin-named-exports-order": "0.0.2",
     "eslint-plugin-storybook": "^0.6.13",
+    "jest": "^29.6.2",
+    "jest-environment-jsdom": "^29.6.2",
+    "jest-image-snapshot": "^6.2.0",
+    "jest-puppeteer": "^9.0.0",
     "prop-types": "15.8.1",
+    "puppeteer": "^21.0.3",
+    "start-server-and-test": "^2.0.0",
     "storybook": "7.3.1",
     "webpack": "5.88.2"
   }
