--- a/package.json
+++ b/package.json
@@ -1,47 +1,43 @@
 {
-  "name": "it-incubator-todolist-ts",
+  "name": "todo13v3",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.10.4",
-    "@emotion/styled": "^11.10.4",
-    "@mui/icons-material": "^5.10.9",
-    "@mui/material": "^5.10.10",
-    "@mui/styled-engine-sc": "^5.10.6",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^14.4.3",
-    "@types/jest": "^29.2.0",
-    "@types/node": "^18.11.2",
-    "@types/react": "^18.0.21",
-    "@types/react-dom": "^18.0.6",
-    "@types/react-redux": "^7.1.24",
-    "@types/uuid": "^8.3.4",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-redux": "^8.0.4",
+    "@emotion/react": "11.10.5",
+    "@emotion/styled": "11.10.5",
+    "@mui/icons-material": "5.10.9",
+    "@mui/material": "5.10.11",
+    "@testing-library/jest-dom": "5.16.5",
+    "@testing-library/react": "13.4.0",
+    "@testing-library/user-event": "14.4.3",
+    "@types/jest": "29.2.0",
+    "@types/node": "18.11.7",
+    "@types/react": "18.0.23",
+    "@types/react-dom": "18.0.7",
+    "@types/react-redux": "7.1.24",
+    "@types/uuid": "8.3.4",
+    "axios": "^1.5.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-redux": "8.0.4",
     "react-scripts": "5.0.1",
-    "redux": "^4.2.0",
-    "styled-components": "^5.3.6",
-    "typescript": "^4.8.4",
-    "uuid": "^9.0.0",
-    "web-vitals": "^3.0.4"
+    "redux": "4.2.0",
+    "typescript": "4.8.4",
+    "uuid": "9.0.0",
+    "web-vitals": "3.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build",
-    "jest:integration": "jest -c integration/jest.config.js",
-    "test:integration": "start-server-and-test storybook http-get://localhost:9009 jest:integration"
+    "storybook": "start-storybook -p 9009 -s public",
+    "build-storybook": "build-storybook -s public"
   },
   "eslintConfig": {
     "extends": [
       "react-app",
-      "react-app/jest",
-      "plugin:storybook/recommended"
+      "react-app/jest"
     ]
   },
   "browserslist": {
@@ -57,26 +53,14 @@
     ]
   },
   "devDependencies": {
-    "@storybook/addon-essentials": "7.3.1",
-    "@storybook/addon-interactions": "7.3.1",
-    "@storybook/addon-links": "7.3.1",
-    "@storybook/addon-onboarding": "1.0.8",
-    "@storybook/addon-storysource": "^7.3.1",
-    "@storybook/blocks": "7.3.1",
-    "@storybook/preset-create-react-app": "7.3.0",
-    "@storybook/react": "7.3.1",
-    "@storybook/react-webpack5": "7.3.1",
-    "@storybook/testing-library": "0.2.0",
-    "babel-plugin-named-exports-order": "0.0.2",
-    "eslint-plugin-storybook": "^0.6.13",
-    "jest": "^29.6.2",
-    "jest-environment-jsdom": "^29.6.2",
-    "jest-image-snapshot": "^6.2.0",
-    "jest-puppeteer": "^9.0.0",
-    "prop-types": "15.8.1",
-    "puppeteer": "^21.0.3",
-    "start-server-and-test": "^2.0.0",
-    "storybook": "7.3.1",
-    "webpack": "5.88.2"
+    "@storybook/addon-actions": "6.5.13",
+    "@storybook/addon-essentials": "6.5.13",
+    "@storybook/addon-links": "6.5.13",
+    "@storybook/builder-webpack5": "6.5.13",
+    "@storybook/manager-webpack5": "6.5.13",
+    "@storybook/node-logger": "6.5.13",
+    "@storybook/preset-create-react-app": "4.1.2",
+    "@storybook/react": "6.5.13",
+    "webpack": "5"
   }
 }
