--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
     "@types/react": "18.0.23",
     "@types/react-dom": "18.0.7",
     "@types/react-redux": "7.1.24",
+    "@types/react-router-dom": "^5.3.3",
     "@types/uuid": "8.3.4",
     "axios": "0.27.2",
+    "formik": "^2.4.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "8.0.4",
+    "react-router-dom": "5.3.0",
     "react-scripts": "5.0.1",
     "redux": "4.2.0",
     "redux-thunk": "^3.1.0",
