--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@mui/icons-material": "5.10.9",
     "@mui/lab": "^5.0.0-alpha.159",
     "@mui/material": "^5.15.3",
+    "@reduxjs/toolkit": "^2.1.0",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "13.4.0",
     "@testing-library/user-event": "14.4.3",
@@ -18,6 +19,8 @@
     "@types/react-redux": "7.1.24",
     "@types/react-router-dom": "^5.3.3",
     "@types/uuid": "8.3.4",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
     "axios": "0.27.2",
     "formik": "^2.4.5",
     "react": "18.2.0",
@@ -27,7 +30,7 @@
     "react-scripts": "5.0.1",
     "redux": "4.2.0",
     "redux-thunk": "^3.1.0",
-    "typescript": "4.8.4",
+    "typescript": "4.1.2",
     "uuid": "9.0.0",
     "web-vitals": "3.0.4"
   },
