--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "@types/react-redux": "7.1.24",
     "@types/react-router-dom": "^5.3.3",
     "@types/uuid": "8.3.4",
-    "@typescript-eslint/eslint-plugin": "^6.21.0",
-    "@typescript-eslint/parser": "^6.21.0",
+    "@typescript-eslint/eslint-plugin": "^7.0.1",
+    "@typescript-eslint/parser": "^7.0.1",
     "axios": "0.27.2",
     "formik": "^2.4.5",
     "react": "18.2.0",
@@ -40,7 +40,9 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 9009 -s public",
-    "build-storybook": "build-storybook -s public"
+    "build-storybook": "build-storybook -s public",
+    "jest:integration": "jest -c integration/jest.config.js",
+    "test:integration": "start-server-and-test storybook http-get://localhost:6006 jest:integration"
   },
   "eslintConfig": {
     "extends": [
@@ -69,6 +71,12 @@
     "@storybook/node-logger": "6.5.13",
     "@storybook/preset-create-react-app": "4.1.2",
     "@storybook/react": "6.5.13",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "jest-image-snapshot": "^6.4.0",
+    "jest-puppeteer": "^10.0.0",
+    "puppeteer": "^22.0.0",
+    "start-server-and-test": "^2.0.3",
     "webpack": "5"
   }
 }
